# ZIPService

./: .env  .env-local  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
fixtures/: client-config.json  init-db-postgres.sql
src/: main.py  settings.py  еуыеуы.py
src/alembic/: env.py
src/alembic/versions/: 96aa4169751a_create_tasks_table.py
src/api/: api.py
src/auth/: keycloak_config.py
src/base/: __init__.py  base.py  base_repository.py  lifespan.py
src/exceptions/: __init__.py  base.py
src/gateways/sonarqube/: __init__.py  schemas.py  sonarqube.py
src/task/api/: api.py  deps.py
src/task/api/endpoints/: task.py
src/task/enums/: TaskStatus.py  __init__.py
src/task/exceptions/: __init__.py  task.py  task_middleware.py
src/task/models/: __init__.py  task.py
src/task/repositories/: __init__.py  storage_repository.py  task_repository.py
src/task/schemas/: __init__.py  task.py
src/task/services/: task_service.py
tests/: .env
tests/alembic/: env.py
tests/integration/: test_task_service.py
tests/unit/: test_task_service.py
