[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Chekarev Lev <you@example.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
minio = "^7.2.0"
python-multipart = "^0.0.20"
ruff = "^0.9.10"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
testcontainers-postgres = "^0.0.1rc1"
testcontainers-minio = "^0.0.1rc1"
testcontainers = "^4.9.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
